# DesktopCharacter

./: .gitignore  .gitmodules  Application.cpp  ConstantBuffers.cpp  ConstantBuffers.h  Core.cpp  Core.h  DesktopCharacter.sln  DesktopCharacter.vcxproj  DesktopCharactor.filters  DesktopCharactor.sln  DesktopCharactor.vcxproj  DesktopMateModoki.sln  DesktopMateModoki.vcxproj  DesktopMateModoki.vcxproj.filters  IModelRenderer.h  LICENSE  Models.cpp  Models.h  PMDModel.cpp  PMDModel.h  Texture.h  Utility.cpp  Utility.h  build.cmd  license.py  shader_compile.py
src/: Application.cpp  Application.h  CMakeLists.txt
src/api/A.I.VOICE_Editor_API/: A.I.VOICE_Editor_API.sln  A.I.VOICE_Editor_API.vcxproj
src/config/: ApplicationConfig.cpp  ApplicationConfig.h  Config.h  GraphicsAPI.h  IConfigChangeListener.h
src/core/: Core.cpp  Core.h  D3D11.cpp  D3D11.h  IEngineStarter.h  Wall.cpp  Wall.h
src/core/collider/: Collider.cpp  Collider.h  IModelOBB.h  IOBBMapGetter.h  OBB.cpp  OBB.h  Ray.cpp  Ray.h
src/core/constant_buffer/: Bones.h  Material.h  ShadowReceiver.h
src/core/event/: EventQueue.h  IEventHandler.h  WindowEvent.cpp  WindowEvent.h
src/core/event/mouse/: IMouseStateGetter.h  MouseState.cpp  MouseState.h
src/core/gui/: IMGUIManager.cpp  IMGUIManager.h
src/core/gui/editor/: ScriptEditorWindow.cpp  ScriptEditorWindow.h
src/core/gui/menu/: MenuWindow.cpp  MenuWindow.h
src/core/log/: LogEntry.cpp  LogEntry.h  LogLevel.cpp  LogLevel.h  Logger.cpp  Logger.h
src/core/math/: Angle.h  GLSLMatrix.h  HLSLMatrix.h  ShaderMatrix.h  WrappedMatrix.h
src/core/model/: IModel.h  IModelRenderer.h  Models.cpp  Models.h  PMDModel.cpp  PMDModel.h
src/core/model/pmd/: PMDFileStruct.h  PMDModel.cpp  PMDModel.h
src/core/object/: IObjectRenderer.h
src/core/object/full_screen_quad/: FullScreenQuad.cpp  FullScreenQuad.h
src/core/object/wall/: WallObject.cpp  WallObject.h
src/core/physics/: IPhysicsSimulationListener.h  Physics.cpp  Physics.h  PhysicsSettings.h  PhysicsWorld.cpp  PhysicsWorld.h  TransformConverter.cpp  TransformConverter.h
src/core/physics/mmd/: MMDFilterCallback.cpp  MMDFilterCallback.h  MMDPhysics.cpp  MMDPhysics.h  MMDPhysicsWorld.cpp  MMDPhysicsWorld.h
src/core/physics/mmd/joint/: MMDJoint.cpp  MMDJoint.h
src/core/physics/mmd/motion_state/: MMDDynamicAndBoneMergeMotionState.cpp  MMDDynamicAndBoneMergeMotionState.h  MMDDynamicMotionState.cpp  MMDDynamicMotionState.h  MMDKinematicMotionState.cpp  MMDKinematicMotionState.h  MMDMotionState.h
src/core/physics/mmd/rigid_body/: MMDRigidBody.cpp  MMDRigidBody.h  MMDRigidBodyShape.h  MMDRigidBodyType.cpp  (+1 more)
src/core/render/: CommonResource.h  IRenderer.h
src/core/render/constant_buffer/: AlphaMaskParams.h  Bones.h  Camera.cpp  Camera.h  ConstantBufferNames.h  FXAA.h  Light.h  Material.h  ModelEdge.h  Shadow.cpp  Shadow.h
src/core/render/model/: IModelRenderer.h  Model.cpp  Model.h  ModelConfig.cpp  ModelConfig.h  ModelManager.cpp  ModelManager.h
src/core/render/motion/: IMotion.h  IMotionHandler.h  MotionState.h
src/core/render/rasterizer/: RasterizerKind.h
src/core/render/render_pass/: IRenderPass.h  RenderPass.cpp  RenderPass.h
src/core/render/render_pipeline/: RenderPassName.h  RenderPipeline.cpp  RenderPipeline.h
src/core/render/render_target_view/: RenderTargetView.h
src/core/render/shader/: BindingSlotKey.cpp  BindingSlotKey.h  BindingSlotKind.h  IShaderBlueprint.h  InputElements.cpp  InputElements.h  SamplerStateNames.h  Shader.cpp  Shader.h  ShaderBindingSlots.cpp  ShaderBindingSlots.h  ShaderRelfection.cpp  ShaderRelfection.h  ShaderType.h
src/core/render/texrure/: Texture.cpp  Texture.h  TextureNames.h
src/core/render/unordered_access_view/: UnorderedAccessViewNames.h
src/core/render_pass/: CommonResource.h  IRenderPass.h
src/core/render_pass/model/: ModelRenderPass.cpp  ModelRenderPass.h
src/core/render_pass/shadow/: ShadowRenderPass.cpp  ShadowRenderPass.h
src/core/render_pass/wall/: WallRenderPass.cpp  WallRenderPass.h
src/core/scene/: IScene.h  Scene.cpp  Scene.h  SceneManager.h
src/core/scene/camera/: SceneCamera.cpp  SceneCamera.h
src/core/scene/light/: Light.cpp  Light.h
src/core/script/: Script.cpp  Script.h
src/core/timer/: DeltaTime.cpp  DeltaTime.h  FrameTimer.cpp  FrameTimer.h  Timer.cpp  Timer.h
src/core/utility/: Algorithm.cpp  Algorithm.h  BinaryReader.cpp  BinaryReader.h  Convert.cpp  Convert.h  Hash.h  Maker.h  Point.h  Result.h  SDLSmartPoiner.cpp  SDLSmartPoiner.h  Utility.h
src/core/window/: IWindowFrame.cpp  IWindowFrame.h  WindowManager.cpp  WindowManager.h  WindowStatus.cpp  WindowStatus.h
src/core/window/windows/: WindowsWindow.cpp  WindowsWindow.h  WindowsWindowTranslator.cpp  WindowsWindowTranslator.h
src/engine/: CMakeLists.txt
src/engine/animation/: CMakeLists.txt
src/engine/assets_system/: CMakeLists.txt  build.cmd
src/engine/assets_system/tests/: test.cpp
src/engine/bypass_shell/: CMakeLists.txt
src/engine/collider/: CMakeLists.txt
src/engine/component/: CMakeLists.txt
src/engine/core/: .clang-format  CMakeLists.txt
src/engine/ecs/: CMakeLists.txt
src/engine/engine_types/: CMakeLists.txt
src/engine/foundation/: .gitignore  CMakeLists.txt
src/engine/foundation/tests/: test.cpp
src/engine/handlers/: CMakeLists.txt
src/engine/physics/: CMakeLists.txt
src/engine/platform/: CMakeLists.txt
src/engine/platform_impl/: CMakeLists.txt
src/engine/renderer/: CMakeLists.txt
src/engine/script/: CMakeLists.txt
src/engine/types/: CMakeLists.txt
src/engine/ui/: CMakeLists.txt
src/shader/: cs_alpha_mask.hlsl  ps_clear_wall.hlsl  ps_fxaa.hlsl  ps_model.hlsl  ps_model_edge.hlsl  ps_shadow_map.hlsl  vs_clear_wall.hlsl  vs_fxaa.hlsl  vs_model.hlsl  vs_model_edge.hlsl  vs_shadow_map.hlsl
src/shader/common/: input_ps_clear_wall.hlsl  input_ps_model.hlsl  input_ps_model_edge.hlsl  input_vs_model.hlsl  ps_input_model.hlsl  vs_input_model.hlsl
src/shader/common/constant_buffer/: alpha_mask_params.hlsl  bones.hlsl  camera.hlsl  fxaa.hlsl  light.hlsl  material.hlsl  model_edge.hlsl  shadow_map.hlsl
(+371 files in other folders)
